Header component added and finished in the frontend

--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "Frontend"
+  "defaultProject": "Frontend",
+  "cli": {
+    "analytics": false
+  }
 }
